# ecg2o

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  startup.sh
examples/: example_al.cpp  example_gn.cpp  example_soft.cpp
examples/comparison_gtsam/: example_gtsam_al.cpp  example_gtsam_gn.cpp  example_gtsam_vertices_edges.h
examples/include/: example_vertices_edges.h
include/: base_fixed_sized_edge_eq.h  example_vertices_edges.h  sparse_optimizer_al.h  sparse_optimizer_eq.h  vertex_lagrange_multiplier.h
include/ecg2o/: base_fixed_sized_edge_eq.h  linear_solver_eigen_lu.h  linear_solver_eigen_qr.h  solver_eigen_lu.hpp  solver_eigen_qr.hpp  sparse_optimizer_al.h  sparse_optimizer_eq.h  vertex_lagrange_multiplier.h
oc_tracking/: oc_test.cpp  plot_data.m
oc_tracking/include/: data_base.h  oc_edges.h  oc_formulation.h  oc_formulation.hpp  oc_parameters.h  oc_system_dynamics_simulator.h  oc_vertices.h  oc_vertices.hpp
oc_tracking/include/edges_oc/: edge_cost_input.h  edge_cost_input.hpp  edge_cost_state.h  edge_cost_state.hpp  edge_dynamics_v_h.h  edge_dynamics_v_h.hpp
src/: example_al.cpp  example_gn.cpp  example_soft.cpp
temp/: al.h  eq.h
